--- a/portfolio.html
+++ b/portfolio.html
@@ -88,13 +88,16 @@ src="https://img.icons8.com/ios/40/ffffff/twitter-circled.png"" class="mb-2"></p
                  <p class="mt-3 text-center" >Confira a seguir os meus principais trabalhos. Clique em demonstração para mais detalhes sobre o projeto.</p>
         </section>        
         <section>
-               <div class="container-fluid">	
-           <article class="row">
+               <div class="container-fluid">
+
+                    <div class="col-lg-4  text-center">
+                            <p class="text-center">Modelo de site</p>
+                    <iframe src=" http://minasnovas.epizy.com" width="310" height="480" ></iframe>
+                        <p class="text-center"><a href=" http://minasnovas.epizy.com" target="_blank"><button type="button" class="btn btn-outline-info"><strong>DEMO</strong></button></a></p>
+                    </div>
   <div class="col-lg-4  text-center ">
                 <p class="text-center">Projeto - Conheça minha cidade Natal.<br> <small>(Feito com WordPress.)</small></p>
-                 <iframe src="https://minasnovas.epizy.com/" width="310" height="480" title="Minha Cidade Natal"></iframe>
-                <p class="text-center"><a href="https://minasnovas.epizy.com/" target="_blank"><button type="button" class="btn btn-outline-info"><strong>DEMO</strong></button></a></p>
-                </div>
+               
   <div class="col-lg-4  text-center ">
              <p class="text-center ">Projeto da Faculdade <small>(One Page)</small><small>(HTML, CSS, JAVASCRIPT, JQUERY, BOOTSTRAP, etc.) </small></p>
                 <iframe src="https://devrmg.github.io/onepage-facul/" width="310" height="480" alt="asjkns"></iframe>
