--- a/portfolio.html
+++ b/portfolio.html
@@ -92,8 +92,8 @@ src="https://img.icons8.com/ios/40/ffffff/twitter-circled.png"" class="mb-2"></p
 
                     <div class="col-lg-4  text-center">
                             <p class="text-center">Modelo de site</p>
-                    <iframe src=" http://minasnovas.epizy.com" width="310" height="480" ></iframe>
-                        <p class="text-center"><a href=" http://minasnovas.epizy.com" target="_blank"><button type="button" class="btn btn-outline-info"><strong>DEMO</strong></button></a></p>
+                    <iframe src="http://minasnovas.epizy.com" width="310" height="480" ></iframe>
+                        <p class="text-center"><a href="http://minasnovas.epizy.com" target="_blank"><button type="button" class="btn btn-outline-info"><strong>DEMO</strong></button></a></p>
                     </div>
   <div class="col-lg-4  text-center ">
                 <p class="text-center">Projeto - Conheça minha cidade Natal.<br> <small>(Feito com WordPress.)</small></p>
@@ -129,7 +129,7 @@ src="https://img.icons8.com/ios/40/ffffff/twitter-circled.png"" class="mb-2"></p
                 <div class="col-lg-4  text-center">
                  <p class="text-center">Modelo de site</p>
                 <iframe src="http://forty.epizy.com" width="310" height="480" ></iframe>
-                    <p class="text-center"><a href="http://forty.epizy.com" target="_blank"><button type="button" class="btn btn-outline-info"><strong>DEMO</strong></button></a></p>
+                    <p class="text-center"><a href="http://forty.epizy.com/" target="_blank"><button type="button" class="btn btn-outline-info"><strong>DEMO</strong></button></a></p>
                 </div>
                     <div class="col-lg-4  text-center">
                         <hr>
