--- a/portfolio.html
+++ b/portfolio.html
@@ -92,16 +92,16 @@ src="https://img.icons8.com/ios/40/ffffff/twitter-circled.png"" class="mb-2"></p
            <article class="row">
   <div class="col-lg-4  text-center ">
                 <p class="text-center">Projeto - Conheça minha cidade Natal.<br> <small>(Feito com WordPress.)</small></p>
-                <iframe src="http://minasnovas.epizy.com" width="310" height="480" ></iframe>
-                <p class="text-center"><a href="http://minasnovas.epizy.com" target="_blank"><button type="button" class="btn btn-outline-info"><strong>DEMO</strong></button></a></p>
+                 <iframe src="http://minasnovas.epizy.com/" width="310" height="480" title="Minha Cidade Natal"></iframe>
+                <p class="text-center"><a href="http://minasnovas.epizy.com/" target="_blank"><button type="button" class="btn btn-outline-info"><strong>DEMO</strong></button></a></p>
                 </div>
   <div class="col-lg-4  text-center ">
              <p class="text-center ">Projeto da Faculdade <small>(One Page)</small><small>(HTML, CSS, JAVASCRIPT, JQUERY, BOOTSTRAP, etc.) </small></p>
-                <iframe src="https://devrmg.github.io/onepage-facul/" width="310" height="480" alt="asjkns"></iframe>
-                    <p class="text-center"><a href="https://devrmg.github.io/onepage-facul/" target="_blank"><button type="button" class="btn btn-outline-info"><strong>DEMO</strong></button></a></p>
+                <iframe src="http://connectinformartica.epizy.com/" width="310" height="480" alt="asjkns"></iframe>
+                    <p class="text-center"><a href="http://connectinformartica.epizy.com/" target="_blank"><button type="button" class="btn btn-outline-info"><strong>DEMO</strong></button></a></p>
                 </div>
                 <div class="col-lg-4 text-center ">
-<p class="text-center">Projeto pessoal - Portfólio <small>(HTML, CSS, JAVASCRIPT, JQUERY, BOOTSTRAP.) </small> </p>
+<p class="text-center">Projeto pessoal - Portfólio Responsivo  <small>(HTML, CSS, JAVASCRIPT, JQUERY, BOOTSTRAP.) </small> </p>
                   <iframe src="index.html" width="310" height="480" ></iframe>
                     <p class="text-center"><a href="https://www.devrm.epizy.com" target="_blank"><button type="button" class="btn btn-outline-info"><strong>DEMO</strong></button></a></p>
               </div>          
