--- a/portfolio.html
+++ b/portfolio.html
@@ -98,7 +98,7 @@ src="https://img.icons8.com/ios/40/ffffff/twitter-circled.png"" class="mb-2"></p
                     <p class="text-center"><a href="https://devrmg.github.io/onepage-facul/" target="_blank"><button type="button" class="btn btn-outline-info"><strong>DEMO</strong></button></a></p>
                 </div>
                 <div class="col-lg-4 text-center ">
-<p class="text-center">Projeto pessoal - Portfólio Responsivo  <small>(HTML, CSS, JAVASCRIPT, JQUERY, BOOTSTRAP.) </small> </p>
+<p class="text-center">Projeto pessoal - Portfólio  <small>(HTML, CSS, JAVASCRIPT, JQUERY, BOOTSTRAP.) </small> </p>
                   <iframe src="index.html" width="310" height="480" ></iframe>
                     <p class="text-center"><a href="https://www.devrm.epizy.com" target="_blank"><button type="button" class="btn btn-outline-info"><strong>DEMO</strong></button></a></p>
               </div>          
